<resources>
    <string name="app_name">GymnasticsNavi</string>

    <string name="action_settings">Settings</string>

    <!-- 共通 -->
    <string name="close">閉じる</string>

    <!-- クラス選択画面 -->
    <string name="class_select_text">クラスを選択してください</string>
    <string name="class_beginner">初心者クラス</string>
    <string name="class_beginner_description">幼児レベルから小学校の体育レベルの技を見ることができます。</string>
    <string name="class_professional">競技クラス</string>
    <string name="class_professional_description">体操競技レベルの技を見ることができます。</string>


    <!-- 性別選択画面 -->
    <string name="gender_select_text">性別を選択してください</string>
    <string name="male">男子</string>
    <string name="female">女子</string>

    <!-- タブ -->
    <string name="tab_floor">床</string>
    <string name="tab_pommel_horse">あん馬</string>
    <string name="tab_rings">つり輪</string>
    <string name="tab_vaults">跳馬</string>
    <string name="tab_parallel_bar">平行棒</string>
    <string name="tab_horizontal_bar">鉄棒</string>
    <string name="tab_balance_beam">平均台</string>
    <string name="tab_uneven_bars">段違い平行棒</string>
    <string name="tab_mat">マット</string>
    <string name="tab_box">跳び箱</string>
</resources>
