<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/MessageTextView.TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_select_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_male"
                style="@style/GenderButton"
                android:background="@drawable/btn_male"
                android:text="@string/male"/>

            <Button
                android:id="@+id/btn_female"
                style="@style/GenderButton"
                android:background="@drawable/btn_female"
                android:text="@string/female"/>

        </LinearLayout>

    </LinearLayout>
</layout>
